--- a/lib2024/assg-4/Simple Style Schema.html
+++ b/lib2024/assg-4/Simple Style Schema.html
@@ -136,7 +136,7 @@
 <tr>
 <td>Open Sans</td>
 <td>Body Text</td>
-<td>16px</td>
+<td>18px</td>
 <td>normal</td>
 </tr>
 <tr>
@@ -153,7 +153,7 @@
 <nav>
 <ul>
 <li>Open-Sans:&nbsp;<a href="https://fonts.google.com/specimen/Open+Sans" title="Open+Sans" target="blank">https://fonts.google.com/specimen/Open+Sans</a></li>
-<li>Noto Sans JP:&nbsp;<a href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" title="Noto+Sans JP" target="blank">'https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap'</a></li>
+<li>Noto Sans JP:&nbsp;<a href="https://fonts.google.com/specimen/Noto+Sans+JP" title="Noto+Sans JP" target="blank">'https://fonts.google.com/specimen/Noto+Sans+JP'</a></li>
 </ul>
 </nav></section>
 <section>
