--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -4,7 +4,6 @@
 	<title>Assignment 4</title>
 	<!-- put your css and font links here!-->
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	<link rel="stylesheet" type="text/css" href="css/fonts.css"/>
 </head>
 <body>
 	<header>
@@ -32,8 +31,8 @@
 	<main class="main clearfix" id="main">
 		<section class="main-content">
 			<h2>Main Content Title</h2><br>
-			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin</p><br>
-			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin</p>
+			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin.</p><br>
+			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin.</p>
 		</section>
 		<article class="image-gallery">
 				<h3>Secondary Content Title</h3>
@@ -60,7 +59,7 @@
 				<div id="sidebar-image" class="image">
 					<img src="img/whitecat.jpg" alt="Sidebar Image" width="285" height="215">
 					<h3>Title of the sidebar</h3>
-					<p>Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweeet roll pastry cookie donut danish pudding sweet roll brownie</p>
+					<p>Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweeet roll pastry cookie donut danish pudding sweet roll brownie.</p>
 				</div>
 			</div>
 		</aside>
