--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -2,15 +2,14 @@
 <html lang="en-ca">
 <head>
 	<title>Assignment 4</title>
-	<!-- put your css and font links here!-->
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
 	<header>
-		<div class="header" id="header">
+		<div class="site-header clearfix" id="site-header">
 			<img src="img/logo.png" alt="logo">
-			<h1>Title of Page</h1>
-				<nav class="main-nav-container desktop nav">
+			<h1 class="page-title">Title Of Page</h1>
+				<nav class="main-nav-container desktop-nav">
 					<ul class="main-nav clearfix">
 						<li>
 						<a href="home.html">Home</a><br>
@@ -51,7 +50,6 @@
 					</div>
 				</div>
 			</article>
-		</main>
 
 
 		<aside class="col-main site-sidebar clearfix">
@@ -63,6 +61,7 @@
 				</div>
 			</div>
 		</aside>
+	</main>
 
 	<footer class="footer" id="footer">
 		<div class="footer-container clearfix">
@@ -71,14 +70,14 @@
 			<nav class="social-container" id="social-container">
 				<ul>
 					<li>
-			<a href="http://facebook.com"><img class=“sm_icon“ src="img/icons/facebook.png" alt="facebook"></a>
-		</li>
-		<li>
-			<a href="http://youtube.com"><img class=“sm_icon“ src="img/icons/youtube.png" alt="youtube"></a>
-		</li>
-		<li>
-			<a href="http://twitter.com"><img class=“sm_icon“ src="img/icons/twitter.png" alt="twitter"></a>
-		</li>
+					<a href="http://facebook.com"><img class=“sm_icon“ src="img/icons/facebook.png" alt="facebook"></a>
+					</li>
+					<li>
+					<a href="http://youtube.com"><img class=“sm_icon“ src="img/icons/youtube.png" alt="youtube"></a>
+					</li>
+					<li>
+					<a href="http://twitter.com"><img class=“sm_icon“ src="img/icons/twitter.png" alt="twitter"></a>
+					</li>
 				</ul>
 			</nav>
 	</footer>
