--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -55,7 +55,7 @@
 		<aside class="col-main site-sidebar clearfix">
 			<div class="site-sidebar">
 				<div id="sidebar-image" class="image">
-					<img src="img/whitecat.jpg" alt="Sidebar Image" width="285" height="215">
+					<img src="img/whitecat.jpg" alt="Sidebar Image">
 					<h3>Title of the sidebar</h3>
 					<p>Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweeet roll pastry cookie donut danish pudding sweet roll brownie.</p>
 				</div>
@@ -67,7 +67,7 @@
 		<div class="footer-container clearfix">
 			<p>CopyRight 2017, All Rights Reserved.</p>
 		</div>
-			<nav class="social-container" id="social-container">
+			<nav class="social-container clearfix" id="social-container">
 				<ul>
 					<li>
 					<a href="http://facebook.com"><img class=“sm_icon“ src="img/icons/facebook.png" alt="facebook"></a>
