--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -144,9 +144,20 @@
 			<p>
 				<strong>Ans: </strong>
 				You like an external style sheet by using &lt; link &gt; to link an external CSS file. You can add a link to the &lt; head &gt; section.
-			<div>Here is an example : &lt; link rel="stylesheet" href="styles.css" &gt;</div>
+			<div>Here is an example : &lt; link rel="stylesheet" href="styles.css"/&gt;</div>
 			</p>
 		</li>
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				Create CSS block to center an element both horizontally and vertically that has position:absolute and has width:200px and height:200px. 
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				<center style="width: 50px; height: 50px; position: absolute; border: solid 3px;
+				padding: 100px;">This is a centered element</center>
+		</li>
+		
 
 
 
