--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-<head>
-	<title>Assignment 4</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-</head>
-<body>
-	<header>
-		<div class="site-header clearfix" id="site-header">
-			<img src="img/logo.png" alt="logo">
-			<h1 class="page-title">Title Of Page</h1>
+	<head>
+		<title>Assignment 4</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	</head>
+	<body>
+		<header>
+			<div class="site-header clearfix" id="site-header">
+				<img src="img/logo.png" alt="logo">
+				<h1 class="page-title">Title Of Page</h1>
 				<nav class="main-nav-container desktop-nav">
 					<ul class="main-nav clearfix">
 						<li>
-						<a href="home.html">Home</a><br>
+							<a href="home.html">Home</a><br>
 						</li>
 						<li>
-						<a href="about.html">About</a><br>
+							<a href="about.html">About</a><br>
 						</li>
 						<li>
-						<a href="contact.html">Contact</a><br>
+							<a href="contact.html">Contact</a><br>
 						</li>
 						<li>
-						<a href="work.html">Work</a><br>
+							<a href="work.html">Work</a><br>
 						</li>
 					</ul>
 				</nav>
 			</div>
 		</header>
-	<main class="main clearfix" id="main">
-		<section class="main-content">
-			<h2>Main Content Title</h2><br>
-			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin.</p><br>
-			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin.</p>
-		</section>
-		<article class="image-gallery">
+		<main class="main clearfix" id="main">
+			<section class="main-content">
+				<h2>Main Content Title</h2><br>
+				<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin.</p><br>
+				<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin.</p>
+			</section>
+			<article class="image-gallery clearfix">
 				<h3>Secondary Content Title</h3>
 				<div class="image-gallery clearfix">
 					<div class="images" id="image-1" >
@@ -50,37 +50,34 @@
 					</div>
 				</div>
 			</article>
-
-
-		<aside class="col-main site-sidebar clearfix">
-			<div class="site-sidebar">
-				<div id="sidebar-image" class="image">
-					<img src="img/whitecat.jpg" alt="Sidebar Image">
-					<h3>Title of the sidebar</h3>
-					<p>Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweeet roll pastry cookie donut danish pudding sweet roll brownie.</p>
+			<aside class="col-main site-sidebar clearfix">
+				<div class="site-sidebar">
+					<div id="sidebar-image" class="image">
+						<img src="img/whitecat.jpg" alt="Sidebar Image">
+						<h3>Title of the sidebar</h3>
+						<p>Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweeet roll pastry cookie donut danish pudding sweet roll brownie.</p>
+					</div>
 				</div>
+			</aside>
+		</main>
+		<footer class="footer" id="footer">
+			<div class="footer-container clearfix">
+				<p>CopyRight 2017, All Rights Reserved.</p>
 			</div>
-		</aside>
-	</main>
-
-	<footer class="footer" id="footer">
-		<div class="footer-container clearfix">
-			<p>CopyRight 2017, All Rights Reserved.</p>
-		</div>
 			<nav class="social-container clearfix" id="social-container">
 				<ul>
 					<li>
-					<a href="http://facebook.com"><img class=“sm_icon“ src="img/icons/facebook.png" alt="facebook"></a>
+						<a href="http://facebook.com"><img class=“sm_icon“ src="img/icons/facebook.png" alt="facebook"></a>
 					</li>
 					<li>
-					<a href="http://youtube.com"><img class=“sm_icon“ src="img/icons/youtube.png" alt="youtube"></a>
+						<a href="http://youtube.com"><img class=“sm_icon“ src="img/icons/youtube.png" alt="youtube"></a>
 					</li>
 					<li>
-					<a href="http://twitter.com"><img class=“sm_icon“ src="img/icons/twitter.png" alt="twitter"></a>
+						<a href="http://twitter.com"><img class=“sm_icon“ src="img/icons/twitter.png" alt="twitter"></a>
 					</li>
 				</ul>
 			</nav>
-	</footer>
-	<!-- Created by Krystal Sobhie 2021-03-19 -->
-</body>
+		</footer>
+		<!-- Created by Krystal Sobhie 2021-03-19 -->
+	</body>
 </html>
