--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -37,7 +37,7 @@
 		</header>
 		<!-- beginning of main content -->
 		<main class="main clearfix" id="main">
-			<article class="main-content">
+			<section class="main-content">
 				<h2>Main Content Title</h2><br>
 				<p>
 					Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin.
@@ -45,7 +45,7 @@
 				<p>
 					Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin.
 				</p>
-			</article>
+			</section>
 			
 			<aside class="col-main site-sidebar">
 				<!-- 			<div class="site-sidebar"> -->
@@ -58,7 +58,7 @@
 				</div>
 				<!-- </div> -->
 			</aside>
-			<section class="image-gallery clearfix">
+			<article class="image-gallery clearfix">
 				<h3>Secondary Content Title</h3>
 				<figure class="image-slide">
 					<img src="img/sleepycat.jpg" class="sleepycat" alt="sleepy cat"/>
@@ -72,7 +72,7 @@
 					<img src="img/onecat.jpg" class="onecat" alt="one cat"/>
 					<figcaption>Image 3</figcaption>
 				</figure>
-			</section>	
+			</article>
 			
 		</main>
 		<footer class="footer" id="footer">
