--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 	<head>
-		<!-- css assignment for Internet Applications -->
+		<!-- CSS assignment for Professor Rathor -->
 		<title>Assignment 4</title>
 		<!-- link style sheet here -->
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
