--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -58,22 +58,26 @@
 				</div>
 				<!-- </div> -->
 			</aside>
+
 			<article class="image-gallery clearfix">
 				<h3>Secondary Content Title</h3>
+
 				<figure class="image-slide">
 					<img src="img/sleepycat.jpg" class="sleepycat" alt="sleepy cat"/>
 					<figcaption>Image 1</figcaption>
 				</figure>
+
 				<figure class="image-slide">
 					<img src="img/threecats.jpg" class="threecats" alt="three cats"/>
 					<figcaption>Image 2</figcaption>
 				</figure>
+
 				<figure class="image-slide">
 					<img src="img/onecat.jpg" class="onecat" alt="one cat"/>
 					<figcaption>Image 3</figcaption>
 				</figure>
-			</article>
-			
+
+			</article>	
 		</main>
 		<footer class="footer" id="footer">
 			<div class="footer-container clearfix">
@@ -86,7 +90,7 @@
 					<li>
 						<a href="http://facebook.com" target="_blank"><img class=“sm_icon“ src="img/icons/facebook.png" alt="facebook"></a>
 					</li>
-					<!-- add target="_blank" so the links open up in a new tab -->
+					<!-- add target="_blank" so the links open up in a new tab from W3schools -->
 					<li>
 						<a href="http://youtube.com" target="_blank"><img class=“sm_icon“ src="img/icons/youtube.png" alt="youtube"></a>
 					</li>
