--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<!-- place title and logo here -->
-		<header>
-			<div class="site-header clearfix" id="site-header">
-				<img src="img/logo.png" alt="logo">
+		<header class="site-header">
+			<div id="site-header" class="site-header clearfix" >
+				<img src="img/logo.png" class="logo" alt="logo">
 				<h1 class="page-title">Title Of Page</h1>
 				<nav class="main-nav-container desktop-nav">
 					<!-- beginning of navigation bar -->
@@ -47,37 +47,31 @@
 				</p>
 			</section>
 			
-			<aside class="col-main site-sidebar">
+			<aside class="col-main site-sidebar clearfix">
 				<!-- 			<div class="site-sidebar"> -->
 				<div id="sidebar-image" class="sidebar-image">
 					<img src="img/whitecat.jpg" alt="Sidebar Image">
-					<h3>Title of the sidebar</h3>
+					<h3 class="section-title">Title of the sidebar</h3>
 					<p>
 						Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweeet roll pastry cookie donut danish pudding sweet roll brownie.
 					</p>
 				</div>
-				<!-- </div> -->
 			</aside>
-
 			<article class="image-gallery clearfix">
-				<h3>Secondary Content Title</h3>
-
+				<h3 class="article-title">Secondary Content Title</h3>
 				<figure class="image-slide">
 					<img src="img/sleepycat.jpg" class="sleepycat" alt="sleepy cat"/>
 					<figcaption>Image 1</figcaption>
 				</figure>
-
 				<figure class="image-slide">
 					<img src="img/threecats.jpg" class="threecats" alt="three cats"/>
 					<figcaption>Image 2</figcaption>
 				</figure>
-
 				<figure class="image-slide">
 					<img src="img/onecat.jpg" class="onecat" alt="one cat"/>
 					<figcaption>Image 3</figcaption>
 				</figure>
-
-			</article>	
+			</article>
 		</main>
 		<footer class="footer" id="footer">
 			<div class="footer-container clearfix">
