Update Simple Style Schema.html

--- a/lib2024/assg-4/Simple Style Schema.html
+++ b/lib2024/assg-4/Simple Style Schema.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Simple Style Schema</title>
 	</head>
+	<!-- This font is for this document -->
 	<body style="font-family: open-sans, sans-serif;font-size: 12px;">
 		<header>
 			<h1>Title of Page</h1>
@@ -22,36 +23,42 @@
 					</tr>
 				</thead>
 				<tbody>
+					<!-- These dimensions are for my whole page -->
 					<tr>
 						<td>Page</td>
 						<td>100%</td>
 						<td>Auto</td>
 						<td>N/A</td>
 					</tr>
+					<!-- This is the dimensions of my header -->
 					<tr>
 						<td>Header</td>
 						<td>100%</td>
 						<td>230px</td>
 						<td>Page</td>
 					</tr>
+					<!-- This is the dimension of my main content -->
 					<tr>
 						<td>Main</td>
 						<td>65%</td>
 						<td>400px</td>
 						<td>Page</td>
 					</tr>
+					<!-- These are the dimensions for my article/image gallery  -->
 					<tr>
 						<td>Article</td>
 						<td>100%</td>
 						<td>210px</td>
 						<td>Main</td>
 					</tr>
+					<!-- These are the dimensions of my aside -->
 					<tr>
 						<td>Aside</td>
 						<td>35%</td>
 						<td>375px</td>
 						<td>Main</td>
 					</tr>
+					<!-- These are the dimensions for my footer -->
 					<tr>
 						<td>Footer</td>
 						<td>100%</td>
@@ -59,12 +66,14 @@
 						<td>Page</td>
 					</tr>
 					<tr>
+						<!-- my aside image is slightly larger than my image gallery images -->
 						<td>Image</td>
 						<td>284px</td>
 						<td>214px</td>
 						<td>Aside</td>
 					</tr>
 					<tr>
+						<!-- my image gallery images -->
 						<td>Image</td>
 						<td>185px</td>
 						<td>135px</td>
@@ -134,6 +143,7 @@
 					</tr>
 				</thead>
 				<tbody>
+					<!-- These are the fonts I used for my assg -->
 					<tr>
 						<td>Open Sans</td>
 						<td>Body Text</td>
