--- a/lib2024/assg-4/sss/Simple Style Schema.html
+++ b/lib2024/assg-4/sss/Simple Style Schema.html
@@ -10,7 +10,7 @@
 		</header><main>
 		<h3>Target Screen:</h3>
 		<p>&nbsp;Desktop</p>
-		<h4>Prototype Image Link: <img src=".../img/webpage-mock-up.jpg" alt="Prototype Image Link" style="width: 100px;height: 125px"></h4>
+		<h4>Prototype Image Link: <img src="img/webpage-mock-up.jpg" alt="Prototype Image Link" style="width: 100px;height: 125px"></h4>
 		<section>
 			<h3>Dimensions:</h3>
 			<table>
