--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<!-- place title and logo here -->
+		<!-- title and logo here -->
 		<header class="site-header">
 			<div class="site-header clearfix" id="site-header">
 				<!-- image for the top left in the header -->
