--- a/lib2024/assg-4/sss/Simple Style Schema.html
+++ b/lib2024/assg-4/sss/Simple Style Schema.html
@@ -10,7 +10,7 @@
 		</header><main>
 		<h3>Target Screen:</h3>
 		<p>&nbsp;Desktop</p>
-		<h4>Prototype Image Link: <img src="img/webpage-mock-up.jpg" alt="Prototype Image Link" style="width: 100px;height: 125px"></h4>
+		<h4>Prototype Image Link: <img src=".../img/webpage-mock-up.jpg" alt="Prototype Image Link" style="width: 100px;height: 125px"></h4>
 		<section>
 			<h3>Dimensions:</h3>
 			<table>
@@ -97,6 +97,7 @@
 				</thead>
 				<tbody>
 					<tr>
+						<!-- text color -->
 						<td>Black</td>
 						<td>Text</td>
 						<td>Primary</td>
@@ -105,6 +106,7 @@
 						<td>1</td>
 					</tr>
 					<tr>
+						<!-- background color  for my header and footer -->
 						<td>Green</td>
 						<td>Background</td>
 						<td>Primary</td>
@@ -113,6 +115,7 @@
 						<td>1</td>
 					</tr>
 					<tr>
+						<!-- color for my nav bar -->
 						<td>Blue</td>
 						<td>Navigation</td>
 						<td>Accent</td>
@@ -121,6 +124,7 @@
 						<td>1</td>
 					</tr>
 					<tr>
+						<!-- background color prior to background image -->
 						<td>BG White</td>
 						<td>Background</td>
 						<td>Primary</td>
@@ -170,6 +174,7 @@
 			<section>
 				<h3>Background Images:</h3>
 				<ul>
+					<!-- my background image -->
 					<li>URL:&nbsp;<a href="https://www.toptal.com/designers/subtlepatterns/watercolor-pattern/" title="watercolor-pattern" target="blank">https://www.toptal.com/designers/subtlepatterns/watercolor-pattern/</a></li>
 					<li>Style: Watercolor Pattern</li>
 				</ul>
